# python-fast-api

./: .coverage  README.md  pyproject.toml
src/: main.py  schemas.py
test/: test_app.py
