[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic = {extras = ["email"], version = "^2.5.2"}
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ignr = "^2.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
isort = "^5.12.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = '.'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue . && isort .'
run = 'uvicorn src.main:app --reload &'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'


[tool.blue]
extend-exclude = '(migrations/)'

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.ruff]
line-length = 79
exclude = ['.env', 'migrations']